# Collision_Test

./: .gitignore  .gitmodules  CMakeLists.txt  Collision_Test.pro  FS_Component__Crop_Area.h  Main.cpp  Main.cpp.autosave  Space_Splitter.cpp  Space_Splitter.h  Space_Splitter_2D.cpp  Space_Splitter_2D.h  Space_Splitter_3D.cpp  Space_Splitter_3D.h
Resources/Font/: font_yellow.mdl  small_font.mdl
Resources/GUI/Main_Game/: Screen.mdl
Resources/Models/: Objects.mdl  circleish.mdl  colliding_object.mdl  debug_frame.mdl  debug_frame_red.mdl  flat_co.mdl  flat_colliding_object.mdl  flat_indicator_red.mdl  hollow_square.mdl  intersection_indicator_3d.mdl  intersection_point_indicator.mdl  pyramid.mdl  quad.mdl  quad_new.mdl  sandclock.mdl  text_field.mdl  text_field_new.mdl  triangle.mdl
Resources/Models/Boring_Square/: Boring_Square.mdl  Draw_Module.mdl  Object.mdl  Physics_Module.mdl
Resources/Models/Boring_Triangle/: Draw_Module.mdl  Object.mdl  Physics_Module.mdl
Resources/Models/Corner__Left_Top/: Draw_Module.mdl  Object.mdl  Physics_Module.mdl
Resources/Models/Corner__Left_Top_Alt/: Draw_Module.mdl  Object.mdl  Physics_Module.mdl
Resources/Models/Sandclock/: Draw_Module.mdl  Object.mdl  Physics_Module.mdl
Resources/Models/flat_cos/: flat_co_2.mdl
Resources/Models/old/: colliding_object.mdl  flat_co.mdl  flat_co_2.mdl  pyramid.mdl  red_cube.mdl  text_field.mdl
Resources/Objects/: Objects.mdl
Resources/Objects/Collision_Indicator/: Model.mdl
Resources/Objects/Crystalis/: AI_Module.mdl  Gravity_Module.mdl  Health_Module.mdl  Model.mdl  Physics_Module.mdl  Type_Module.mdl
Resources/Objects/Ground/: Draw_Module.mdl  Model.mdl  Physics_Module.mdl  Type_Module.mdl
Resources/Objects/Model_Test_Entity/: Draw_Module.mdl  Health_Module.mdl  Model.mdl  Physics_Module.mdl
Resources/Objects/Physics_Test_Object/: Draw_Module.mdl  Model.mdl  Physics_Module.mdl
Resources/Objects/Physics_Test_Object__Pyramid/: Draw_Module.mdl  Model.mdl  Physics_Module.mdl
Resources/Objects/Player/: Control_Module.mdl  Gravity_Module.mdl  Light_Source_Module.mdl  Model.mdl  Physics_Module.mdl  Type_Module.mdl
Resources/Objects/Shards_Splash_FX/: Model.mdl
Resources/Resources/: Resources.mdl
Resources/Resources/Font/: Resources.mdl  Simple_Font.mdl
Resources/Resources/Models/: Resources.mdl
Resources/Resources/Sounds/: Resources.mdl
Resources/Resources/Textures/: Resources.mdl
Resources/Shaders/: Fragment_Shader.mdl  Fragment_Shader__Color_Component.mdl  Fragment_Shader__Color_Component__Source.mdl  Shader_Manager.mdl  Shader_Program.mdl  Vertex_Shader.mdl  Vertex_Shader__Color_Component.mdl  Vertex_Shader__Color_Component__Source.mdl  Vertex_Shader__Transform_Component__Source.mdl  fragment_shader.shader  vertex_shader.shader
Resources/Shaders/Base/: fragment_shader.shader
Resources/Shaders/Default_Shader/: Draw_Rule.mdl  Shader_Program.mdl  Vertex_Shader.mdl  Vertex_Shader__Normals_Component.mdl  Vertex_Shader__Normals_Component__Source.mdl  Vertex_Shader__Texture_Coords_Component__Source.mdl  Vertex_Shader__Transform_Component.mdl  Vertex_Shader__Transform_Component__Source.mdl
Resources/Shaders/Final_Shader/: Fragment_Shader.mdl  Fragment_Shader__Brightness_Component.mdl  Fragment_Shader__Brightness_Component__Source.mdl  Fragment_Shader__Brightness_Uniform_Component.mdl  Fragment_Shader__Light_Component.mdl  Fragment_Shader__Light_Component__Source.mdl  Shader_Program.mdl  Vertex_Shader.mdl  Vertex_Shader__Fullscreen_Component.mdl  Vertex_Shader__Fullscreen_Component__Source.mdl
Resources/Shaders/GUI/: fs_crop_area_component.shader  vertex_transform_component.shader
Resources/Shaders/GUI_Shader/: Draw_Rule.mdl  Fragment_Shader.mdl  Fragment_Shader__Texture_Coords_Component.mdl  Shader_Program.mdl  Vertex_Shader.mdl  Vertex_Shader__Texture_Coords_Component.mdl  Vertex_Shader__Transform_Component__Source.mdl
Resources/Shaders/Helpers/: Default_Draw_Module.mdl  Fractured_Draw_Module.mdl  Geometry_Rendering_Helper.mdl
Resources/Shaders/Particles_Shader/: Shader_Program.mdl  Vertex_Shader.mdl  Vertex_Shader__Normals_Component__Source.mdl  Vertex_Shader__Positions_Data_Component.mdl  Vertex_Shader__Rotations_Data_Component.mdl  Vertex_Shader__Time_Data_Component.mdl  (+1 more)
Resources/Spawn_Controller/: Spawn_Controller.mdl
Resources/Terrain/: Terrain_Object.mdl
Resources/Textures/: textures.mdl
Resources/Weapons/: Weapons.mdl
include/: Click_Controller.h  Collision_Resolution.h  Control_Module.h  Maybe_Immovable_Physics_Module.h
include/Application/: Application.h
include/Controllers/: Camera_Controller.h  Spawn_Controller.h
include/Graphics/: Camera.h  Fragment_Shader_Light_Component.h  Renderer_Helper.h
include/Messages/: Messages.h
include/Modules/: Attack_Module.h  Health_Module.h  Light_Source_Module.h  On_Damaged_Effect_Module.h  On_Death_Effect_Module.h  Player_Control_Module.h  Type_Module.h  Velocity_Module.h
include/Physics/: Broad_Phase__Terrain.h  Collision_Resolution.h
include/Terrain/: Terrain.h  Terrain_Controller.h  Terrain_Generator.h  Terrain_Grid.h  Terrain_Utility.h
include/Tools/: Entity_Tools.h
include/Weapons/: Generic_Weapon.h  Weapon.h
old_and_dysfunctional/: _Space_Splitter_2D.cpp  _v3_Space_Splitter_2D.cpp  _v3_Space_Splitter_2D.h
source/: Click_Controller.cpp  Collision_Resolution.cpp  Control_Module.cpp  Maybe_Immovable_Physics_Module.cpp
source/Application/: Application.cpp
source/Controllers/: Camera_Controller.cpp  Spawn_Controller.cpp
source/Graphics/: Camera.cpp  Fragment_Shader_Light_Component.cpp  Renderer_Helper.cpp
source/Modules/: Attack_Module.cpp  Health_Module.cpp  Light_Source_Module.cpp  On_Damaged_Effect_Module.cpp  On_Death_Effect_Module.cpp  Player_Control_Module.cpp  Type_Module.cpp  Velocity_Module.cpp
source/Physics/: Broad_Phase__Terrain.cpp  Collision_Resolution.cpp
source/Terrain/: Terrain.cpp  Terrain_Controller.cpp  Terrain_Generator.cpp  Terrain_Grid.cpp  Terrain_Utility.cpp
source/Tools/: Entity_Tools.cpp
source/Weapons/: Generic_Weapon.cpp  Weapon.cpp
(+136 files in other folders)
